add link directon dashboard

--- a/src/index.html
+++ b/src/index.html
@@ -61,14 +61,14 @@
 
                     <div class="grid gap-4 sm:grid-flow-col mx-auto my-[1rem] max-w-180">
                       <a
-                        href="#"
+                        href="daftar-konsultasi.html"
                         class="inline-flex items-center justify-center rounded-md border border-stroke bg-white py-4 px-10 text-center font-medium text-black hover:bg-opacity-90 lg:px-8 xl:px-10"
                       >
                         Riwayat Konsultasi
                       </a>
 
                       <a
-                        href="#"
+                        href="atur-jadwal.html"
                         class="inline-flex items-center justify-center rounded-md bg-primary py-4 px-10 text-center font-medium text-white hover:bg-opacity-90 lg:px-8 xl:px-10"
                       >
                         Buat Jadwal Konsultasi
