edit headline user at dashboard

--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@
                     >
                       Hallo... <span id="user-name">Dimas Rizky!</span>
                     </h3>
-                    <p class="font-medium">18 Tahun</p>
+                    <p class="font-medium">Pasien</p>
 
                     <div class="grid gap-4 sm:grid-flow-col mx-auto my-[1rem] max-w-180">
                       <a
