edit riwayat konsultasi

--- a/src/daftar-konsultasi.html
+++ b/src/daftar-konsultasi.html
@@ -48,7 +48,7 @@
               <nav>
                 <ol class="flex items-center gap-2">
                   <li><a href="index.html">Dashboard /</a></li>
-                  <li class="text-primary">Pembayaran</li>
+                  <li class="text-primary">Konsultasi</li>
                 </ol>
               </nav>
             </div>
